developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__Main_age_of_applicant__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Main_age_of_applicant__c</fullName>
    <label>Main age of applicant</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>