developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__Months_at_latest_address__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Months_at_latest_address__c</fullName>
    <label>Months at latest address</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>