developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__Months_since_2nd_last_consumer_enq__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Months_since_2nd_last_consumer_enq__c</fullName>
    <label>Months since 2nd last consumer enq</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>