developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__Months_since_last_consumer_enquiry__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Months_since_last_consumer_enquiry__c</fullName>
    <label>Months since last consumer enquiry</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>