developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__New_to_bureau_flag__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__New_to_bureau_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New to bureau flag</label>
    <type>Checkbox</type>
</CustomField>