developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__Number_of_business_names_held__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Number_of_business_names_held__c</fullName>
    <label>Number of business names held</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>