developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__Number_of_unpaid_unsettled_judgements_60__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Number_of_unpaid_unsettled_judgements_60__c</fullName>
    <label>Number of unpaid/unsettled judgements&lt;60</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>