developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__Own_number_consumer_default_SCI_60_84__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Own_number_consumer_default_SCI_60_84__c</fullName>
    <label>Own number -consumer default/SCI&lt; 60/84</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>