developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__previous_directorships_120_mths__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__previous_directorships_120_mths__c</fullName>
    <label>previous directorships &lt;120 mths</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>