developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__previous_directorships_last_60_months__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__previous_directorships_last_60_months__c</fullName>
    <label>previous directorships &lt; last 60 months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>