developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__Status_commercial_def_SCI_60_84_mths__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Status_commercial_def_SCI_60_84_mths__c</fullName>
    <label>Status -commercial def/SCI&lt;60/84 mths</label>
    <length>15</length>
    <type>Text</type>
</CustomField>