developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__Status_last_consumer_default_SCI_60_84__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Status_last_consumer_default_SCI_60_84__c</fullName>
    <label>Status-last consumer default/SCI&lt;60/84</label>
    <length>15</length>
    <type>Text</type>
</CustomField>