developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__unpaid_unsettled_court_writs_60_mths__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__unpaid_unsettled_court_writs_60_mths__c</fullName>
    <label>unpaid/unsettled court writs&lt;60 mths</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>