developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__value_of_commercial_enq_60_mths__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__value_of_commercial_enq_60_mths__c</fullName>
    <label>value of commercial enq&lt;60 mths</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>