developerProject/force-app/main/default/objects/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c/fields/OJSERLIB__Value_of_consumer_enq_60_mths__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Value_of_consumer_enq_60_mths__c</fullName>
    <label>Value of consumer enq&lt;60 mths</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>